--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -1,1 +1,20 @@
 
+<mat-card class="course-card mat-mdc-elevation-specific mat-elevation-z7" *ngFor="let course of courses">
+  <mat-card-header>
+    <mat-card-title>{{course.description}}</mat-card-title>
+  </mat-card-header>
+
+  <img mat-card-image [src]="course.iconUrl">
+
+  <mat-card-content>
+    <p>{{course.longDescription}}</p>
+  </mat-card-content>
+
+  <mat-card-actions class="course-sections">
+    <button mat-raised-button color="primary"
+      [routerLink]="['courses', course.id]">View Course</button>
+
+    <button mat-raised-button color="accent" (click)="editCourse(course)">
+      Edit Course</button>
+  </mat-card-actions>
+</mat-card>
